--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="owners">Owners</string>
     <string name="users">Users</string>
+    <string name="filter_str">filter</string>
 </resources>
