--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="female_str">Female</string>
     <string name="color_all_str">Color(s)</string>
     <string name="colors_str">green, red, yellow</string>
+    <string name="download_data_str">Downloading neccessary data...</string>
 </resources>
