--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
     <string name="owners">Owners</string>
     <string name="users">Users</string>
     <string name="filter_str">filter</string>
-    <string name="color_str">Color</string>
-    <string name="year_str">Year</string>
+    <string name="color_str">Color : </string>
+    <string name="year_str">Year : </string>
     <string name="brand_str">Brand</string>
-    <string name="country_str">Country</string>
-    <string name="gender_str">Gender</string>
-    <string name="job_str">Job</string>
-    <string name="email_str">Email:</string>
-    <string name="bio_str">Bio:</string>
+    <string name="country_str">Country : </string>
+    <string name="gender_str">Gender : </string>
+    <string name="job_str">Job : </string>
+    <string name="email_str">Email : </string>
+    <string name="bio_str">Bio :</string>
     <string name="user_details_str">User Details</string>
     <string name="john_doe_str">John Doe</string>
     <string name="male_str">Male</string>
